# scalable_system_setup

./: CHANGELOG.rst  CMakeLists.txt  package.xml  readme.md
config/: aau_devel.rosinstall  aau_integration.rosinstall  all.rosinstall  apm.rosinstall  arm_motion.rosinstall  full.rosinstall  inesc_apm_devel.rosinstall  inesc_devel.rosinstall  release.rosinstall  release_https.rosinstall  release_psa.rosinstall  release_psa_https.rosinstall  scalable.rosinstall
env-hooks/: scalable.bash
launch/: main.launch
scripts/: update_workspace.sh
