<package>
  <name>scalable_system_setup</name>
  <version>1.0.2</version>
  <description>
    Configuration files for the SCALABLE project
  </description>
  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <license>BSD</license>
  <author>Francesco Rovida</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
